Ajout schema+modif photo

--- a/index.html
+++ b/index.html
@@ -21,32 +21,44 @@
 
 </head>
 <body>
-
-  <div class="parallax-container" id="main-parallax-container">
+  <div id="main-container" >
+  <div class="container" >
     <div class="section no-pad-bot">
-      <div class="container">
         <div class="row center">
         	<div class="col s6 offset-s3">
-        		<img src="assets/logo-zenbee-blc.png" class="responsive-img">
+        		<img src="assets/logo-zenbee-blc.png" class="responsive-img" id="main-logo">
           </div>
           <div class="col s12">
             <h5 class="header white-text baseline">GET THE MOST OUT OF YOUR TRIP</h5>
-            <p class="white-text under-baseline">The best route every day based on what you want and local data in 20+ capital cities</p>
+            <p class="white-text under-baseline">Your daily plan optimized any time</p>
         	</div>
         </div>
         <div class="row center">
-          <a href="#discover" id="download-button" class="btn-large waves-effect waves-light orange darken-3 round-edges">discover</a>
+          <a href="#get-started" id="download-button" class="btn-large waves-effect waves-light orange darken-3 round-edges">Start planning</a>
         </div>
-        <br><br>
-      </div>
+        
     </div>
-    <div class="parallax"><img src="assets/milan-chudoba-recut.jpg" alt="Photo by Milan Chudoba on Unsplashed"></div>
+
+  </div>
   </div>
 
 
 
   <div class="container scrollspy" id="discover">
     <div class="section">
+      <div class="row center">
+        <h4 class="col s12 light">How it works</h4>
+        <hr class="hr-divider black black-text">
+      </div>
+      <div class="row center">
+        <img src="assets/schema-utilisation2.png" class="responsive-img">
+      </div>
+
+
+
+
+
+    <!--
       <div class="row center">
         <h4 class="col s12 light">A revolutionary travel assistant</h4>
         <hr class="hr-divider black black-text">
@@ -76,9 +88,11 @@
 
       <div class="row center">
           <a href="#get-started" class="btn-large orange darken-3 white-text waves-effect waves-light round-edges">TRY IT NOW</a>
-      </div>
+      </div>-->
     </div>
   </div>
+
+
 
 
   <div class="section" id="destinations">
