--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<title>Zenbee - A revolutionary travel assistant</title>
   <link rel="icon" type="image/png" href="assets/favicon2.png">
-	<link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+	<link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen"/>
   <link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -53,42 +53,6 @@
       <div class="row center">
         <img src="assets/schema-utilisation2.png" class="responsive-img">
       </div>
-
-
-
-
-
-    <!--
-      <div class="row center">
-        <h4 class="col s12 light">A revolutionary travel assistant</h4>
-        <hr class="hr-divider black black-text">
-      </div>
-
-      <div class="row center pictogrammes">
-        <div class="col s12 m6">
-          <img src="assets/chrono-150x150.png">
-          <p class="orange-text text-darken-3">Optimize your sightseeing<br>in seconds</p>
-        </div>
-        <div class="col s12 m6">
-          <img src="assets/weather-150x150.png">
-          <p class="orange-text text-darken-3">Adjust your activities<br>to the weather</p>
-        </div>
-      </div>
-
-      <div class="row center pictogrammes">
-        <div class="col s12 m6">
-          <img src="assets/queue-150x150.png">
-          <p class="orange-text text-darken-3">Access monuments when<br>queue is at its minimum</p>
-        </div>
-        <div class="col s12 m6">
-          <img src="assets/couverts-150x150.png">
-          <p class="orange-text text-darken-3">Experience only true local<br>restaurants & bars</p>
-        </div>
-      </div>
-
-      <div class="row center">
-          <a href="#get-started" class="btn-large orange darken-3 white-text waves-effect waves-light round-edges">TRY IT NOW</a>
-      </div>-->
     </div>
   </div>
 
@@ -145,9 +109,9 @@
 
         <form class="center" action="form.php" method="post">
           <div class="row">
-          <div class="input-field col s10 offset-s1 m6">
+          <div class="input-field col s10 offset-s1 m6 offset-m3">
             <select class="validate">
-              <option value="default" selected>Where are we going?</option>
+              <option value="default" selected disabled>Where are we going?</option>
               <option value="Amsterdam">Amsterdam</option>
               <option value="Barcelona">Barcelona</option>
               <option value="Berlin">Berlin</option>
@@ -162,7 +126,9 @@
             </select>
             <label></label>
           </div>
-          <div class="input-field col s6 m3" >
+          </div>
+          <div class="row">
+          <div class="input-field col s6 m3 offset-m3" >
             <label for="start">Start</label>
             <input type="text" class="datepicker" name="start" required>
           </div>
@@ -172,16 +138,26 @@
             <input type="text" class="datepicker" name="end" required>
           </div>
           </div>
+          <div class="row">
+            <div class="col s12 center">
+              <p class="center">Food budget:</p>
+            </div>
+            <div class="col s10 offset-s1 m6 offset-m3">
+              <p class="range-field">
+                <input type="range" min="5" max="100" step="5" name="food-budget"/>
+              </p>
+            </div>
+          </div>
 
           <div class="row">
 
           <div class="col l12 m12 radio-toolbar ">
             <div class="row">
-              <div class="col s12 m6 s-center-align m-right-align l-right-align ">
-                <p>Travelers: </p>
+              <div class="col s12 center ">
+                <p>I travel with: </p>
               </div>
 
-              <div class="col s12 m6 s-center-align m-left-align l-left-align">
+              <div class="col s12 center">
                 <input type="radio" name="travelers" id="couple" value="couple" checked/>
                 <label for="couple" class="waves-effect waves-light">Couple</label>
 
@@ -200,12 +176,12 @@
 
           <div class="col l12 m12 radio-toolbar">
             <div class="row">
-              <div class="col s12 m6 s-center-align m-right-align l-right-align ">
+              <div class="col s12 center ">
                 <p>I have been there: </p>
               </div>
               
 
-              <div class="col s12 m6 s-center-align m-left-align l-left-align">
+              <div class="col s12 center">
                 <input type="radio" name="know-city" id="never" value="never" checked />
                 <label for="never" class="waves-effect waves-light">Never!</label>
 
@@ -221,99 +197,13 @@
             </div>
           </div>
 
+
           <div class="row" style="margin-bottom: 0;">
-          <div class="col s12 center">
-            <h5>Activity preferences</h5>
-          </div>
-          </div>
-
-          <div class="row star-section">
-           <div class="col s6 m3">
-              <p class="right-align">Museums :  </p>
-            </div>
-            <div class="col s6 m3 left-align star-choice">
-            <span class="rating">
-              <input id="museum3" type="radio" name="museum" value="3">
-              <label for="museum3">3</label>
-              <input id="museum2" type="radio" name="museum" value="2">
-              <label for="museum2">2</label>
-              <input id="museum1" type="radio" name="museum" value="1">
-              <label for="museum1">1</label>
-              <input id="museum0" type="radio" name="museum" value="0" checked>
-              <label for="museum0" class="hide">0</label>
-            </span>
-            </div>
-
-           <div class="col s6 m3">
-              <p class="right-align">Historic Sites :  </p>
-            </div>
-            <div class="col s6 m3 left-align star-choice">
-            <span class="rating">
-              <input id="shopping3" type="radio" name="historic" value="3">
-              <label for="shopping3">3</label>
-              <input id="shopping2" type="radio" name="historic" value="2">
-              <label for="shopping2">2</label>
-              <input id="shopping1" type="radio" name="historic" value="1">
-              <label for="shopping1">1</label>
-              <input id="shopping0" type="radio" name="historic" value="0" checked>
-              <label for="shopping0" class="hide">0</label>
-            </span>
+            <div class="col s12 center">
+              <h5></h5>
             </div>
           </div>
 
-          <div class="row star-section">
-           <div class="col s6 m3">
-              <p class="right-align">Good Food :  </p>
-            </div>
-            <div class="col s6 m3 left-align star-choice">
-            <span class="rating">
-              <input id="food3" type="radio" name="food" value="3">
-              <label for="food3">3</label>
-              <input id="food2" type="radio" name="food" value="2">
-              <label for="food2">2</label>
-              <input id="food1" type="radio" name="food" value="1">
-              <label for="food1">1</label>
-              <input id="food0" type="radio" name="food" value="0" checked>
-              <label for="food0" class="hide">0</label>
-            </span>
-            </div>
-
-           <div class="col s6 m3">
-              <p class="right-align">Shopping :  </p>
-            </div>
-            <div class="col s6 m3 left-align star-choice">
-            <span class="rating">
-              <input id="sites3" type="radio" name="shopping" value="3">
-              <label for="sites3">3</label>
-              <input id="sites2" type="radio" name="shopping" value="2">
-              <label for="sites2">2</label>
-              <input id="sites1" type="radio" name="shopping" value="1">
-              <label for="sites1">1</label>
-              <input id="sites0" type="radio" name="shopping" value="0" checked>
-              <label for="sites0" class="hide">0</label>
-            </span>
-            </div>
-          </div>
-
-          <div class="row">
-           <div class="col s6 m3 ">
-              <p class="right-align">Night Life :  </p>
-            </div>
-            <div class="col s6 m3 left-align star-choice">
-            <span class="rating">
-              <input id="night3" type="radio" name="night" value="3">
-              <label for="night3">3</label>
-              <input id="night2" type="radio" name="night" value="2">
-              <label for="night2">2</label>
-              <input id="night1" type="radio" name="night" value="1">
-              <label for="night1">1</label>
-              <input id="night0" type="radio" name="night" value="0" checked>
-              <label for="night0" class="hide">0</label>
-            </span>
-            </div>
-
-          </div>
-          
           <div class="row center">
             <button class="btn waves-effect waves-light round-edges" type="submit" name="action">Show me
               <i class="material-icons right">send</i>
