Remove duplication of code and simplify

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           </div>
 
           <div class="row center">
-            <button class="btn waves-effect waves-light round-edges" type="submit" name="action">Show me
+            <button class="btn waves-effect waves-light round-edges orange darken-3" type="submit" name="action">Show me
               <i class="material-icons right">send</i>
             </button>
           </div>
@@ -186,6 +186,9 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
+  <script>
+    applyTheme('#ef6c00')
+  </script>
 
 </body>
 </html>
