--- a/success.html
+++ b/success.html
@@ -47,56 +47,10 @@
 	</div>
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
-  <script>
-  	(function($){
-  $(function(){
-  	var themeColor ;
-
-// Check browser support
-if (typeof(Storage) !== "undefined") {
-    // Store
-    themeColor = localStorage.getItem("themeColor");
-   if(themeColor == undefined)
-   {localStorage.setItem("themeColor", "blue");
-    themeColor = 'blue';
-    } 
-  
-} else {
-  Materialize.toast("Sorry, your browser does not support Web Storage...", 4000) 
-}
-
-      $(".nav-wrapper").css("background-color", themeColor);
-      $(".secondary-content>.material-icons").css("color", themeColor);
-      $(".btn").css("background-color", themeColor);
-      $(".page-footer").css("background-color",themeColor);
-      $(".input-field").css("color", themeColor);
-      $(".input-field>.material-icons").css("color", themeColor);
-      $(".input-field>label").css("color",themeColor);
-      $(".dropdown-content>li>a").css("color", themeColor);
-
-            var themeColor = '#ffffff';
-      $(".nav-wrapper").css("background-color", themeColor);
-      $(".secondary-content>.material-icons").css("color", themeColor);
-      $(".btn").css("background-color", themeColor);
-      $(".page-footer").css("background-color", themeColor);
-      $(".input-field").css("color", themeColor);
-      $(".input-field>.material-icons").css("color", themeColor);
-      $(".input-field>label").css("color", themeColor);
-      $(".btn-floating").css("background-color", themeColor);
-      $(".dropdown-content>li>a").css("color", themeColor);
-      
-      // Update Theme Color
-       if (typeof(Storage) !== "undefined") {
-        // Store
-        localStorage.setItem("themeColor", themeColor);
-
-       } else {
-      Materialize.toast("Sorry, your browser does not support Web Storage...", 4000) 
-       }
-
-  }); // end of document ready
-})(jQuery); // end of jQuery name space
-  </script>
+	<script src="js/init.js"></script>
+	<script>
+    applyTheme('#fff')
+	</script>
 
 </body>
 </html>
