--- a/success.html
+++ b/success.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta httpbutto-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<title>Zenbee - A revolutionary travel assistant</title>
   	<link rel="icon" type="image/png" href="assets/favicon2.png">
@@ -24,7 +24,7 @@
 		<div class="valign-wrapper success_wrap"  >
 			<div class="row center">
 			<div class="col m12 l6">
-				<h5 class="section white-text">Thank you for your interest in Zenbee travel assistant!<br/>We are not fully ready yet.</h4>
+				<h5 class="section white-text">Thank you for your interest in Zenbee travel assistant!<br/>We are not fully ready yet.</h5>
 				<p>To be part of our beta-testers and know more about the evolution of the project, leave us your e-mail address : )</p>
 				<form class="center" action="email.php" method="post">
 					<div class="input-field col s12">
