Style changes for home page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
     gtag('config', 'UA-108294785-1');
   </script>
 
@@ -25,12 +24,12 @@
   <div class="container" >
     <div class="section no-pad-bot">
         <div class="row center">
-        	<div class="col s6 offset-s3">
+        	<div class="col s12">
         		<img src="assets/logo-zenbee-blc.png" class="responsive-img" id="main-logo">
           </div>
           <div class="col s12">
-            <h5 class="header white-text baseline">GET THE MOST OUT OF YOUR TRIP</h5>
-            <p class="white-text under-baseline">Your daily plan optimized any time</p>
+            <h5 class="header white-text baseline">Get the most out of your trip</h5>
+            <p class="white-text under-baseline">Your daily activities always optimized</p>
         	</div>
         </div>
         <div class="row center">
